code correction, adpating to the standard 2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "loja"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "Ennio Gomide",email = "ennio.gomide@gmail.com"}
+    {name = "Ennio Gomide", email = "ennio.gomide@gmail.com"}
 ]
 readme = "README.md"
 requires-python = ">=3.13"
@@ -25,20 +25,8 @@ packages = [
     {include = "loja", from = "src"}
 ]
 
-
 [tool.poetry.group.dev.dependencies]
+isort = "^5.10.1"
+black = "^23.9.1"
+flake8 = "^7.3.0"
 pre-commit = "^4.3.0"
-ruff = "^0.12.12"
-
-[tool.ruff]
-line-length = 79
-exclude = ["migrations", "__pycache__"]
-target-version = "py313"
-
-[tool.ruff.lint]
-select = ["E", "F", "I"]
-ignore = ["E501"]  # Ignora linha muito longa
-
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
